Some more changes

--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -44,9 +44,9 @@
       </div>
       <div class="container-music">
         <div class="music-logo">
-
+          <img src="images/icon-music.svg" />
         </div>
-        <div class="music-details">
+        <div class="music-details-information">
           <h3>Annual Plan</h3>
           <h4>$59.99/year</h4>
         </div>
